# dark-factory

./: CLAUDE.md  README.md
auth-whitebox/: .gitignore  Makefile  api.py  app.py  auth.py  middleware.py  models.py  mutations.yaml  pyproject.toml  requirements.txt  spec.py  store.py
auth-whitebox/tests/: conftest.py  test_api.py  test_properties.py  test_spec_conformance.py  test_whitebox.py
auth-whitebox/validation/: counterexample_search.py  mutation_analysis.py  run_mutations.py
calculator-artifact/: Makefile  README.md  api.py  app.py  models.py  pyproject.toml  requirements.txt  spec.py  store.py
calculator-artifact/tests/: conftest.py  test_api.py  test_models.py  test_properties.py  test_spec_conformance.py  test_store.py
calculator-whitebox/: Makefile  README.md  calculator.py  pyproject.toml  requirements.txt  spec.py
calculator-whitebox/tests/: test_properties.py  test_spec_conformance.py  test_whitebox.py
calculator-whitebox/validation/: counterexample_search.py  mutation_analysis.py
dark-calculator/: README.md  bounds.py  calculator.py  factory.py  spec.py
dark-calculator/tests/: test_bounds.py  test_properties.py  test_spec.py
