[project]
name = "calculator-whitebox"
version = "0.1.0"
description = "MVP demonstrating a white-box verification workflow"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mutmut]
paths_to_mutate = "calculator.py"
tests_dir = "tests/"
runner = "python -m pytest tests/ -x -q"

[tool.coverage.run]
source = ["calculator"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
